--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -51,110 +51,124 @@ m4trace:configure.ac:4: -1- AC_SUBST([ECHO_C])
 m4trace:configure.ac:4: -1- AC_SUBST([ECHO_N])
 m4trace:configure.ac:4: -1- AC_SUBST([ECHO_T])
 m4trace:configure.ac:4: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:5: -1- AC_CONFIG_AUX_DIR([config])
-m4trace:configure.ac:7: -1- AC_DEFINE_TRACE_LITERAL([MPI_ADDR])
-m4trace:configure.ac:7: -1- AH_OUTPUT([MPI_ADDR], [/* MPI\'s address */
+m4trace:configure.ac:6: -1- AC_CONFIG_AUX_DIR([config])
+m4trace:configure.ac:8: -1- AC_DEFINE_TRACE_LITERAL([MPI_ADDR])
+m4trace:configure.ac:8: -1- AH_OUTPUT([MPI_ADDR], [/* MPI\'s address */
 #undef MPI_ADDR])
-m4trace:configure.ac:8: -1- AC_DEFINE_TRACE_LITERAL([RACK])
-m4trace:configure.ac:8: -1- AH_OUTPUT([RACK], [/* Rack number */
+m4trace:configure.ac:9: -1- AC_DEFINE_TRACE_LITERAL([RACK])
+m4trace:configure.ac:9: -1- AH_OUTPUT([RACK], [/* Rack number */
 #undef RACK])
-m4trace:configure.ac:9: -1- AC_DEFINE_TRACE_LITERAL([SLOT])
-m4trace:configure.ac:9: -1- AH_OUTPUT([SLOT], [/* CPU\'s slot */
+m4trace:configure.ac:10: -1- AC_DEFINE_TRACE_LITERAL([SLOT])
+m4trace:configure.ac:10: -1- AH_OUTPUT([SLOT], [/* CPU\'s slot */
 #undef SLOT])
-m4trace:configure.ac:10: -1- AC_DEFINE_TRACE_LITERAL([DAREA])
-m4trace:configure.ac:10: -1- AH_OUTPUT([DAREA], [/* PLC\'s data area */
+m4trace:configure.ac:11: -1- AC_DEFINE_TRACE_LITERAL([DAREA])
+m4trace:configure.ac:11: -1- AH_OUTPUT([DAREA], [/* PLC\'s data area */
 #undef DAREA])
-m4trace:configure.ac:11: -1- AC_DEFINE_TRACE_LITERAL([DBLEN])
-m4trace:configure.ac:11: -1- AH_OUTPUT([DBLEN], [/* PLC\'s data area length */
+m4trace:configure.ac:12: -1- AC_DEFINE_TRACE_LITERAL([DBLEN])
+m4trace:configure.ac:12: -1- AH_OUTPUT([DBLEN], [/* PLC\'s data area length */
 #undef DBLEN])
-m4trace:configure.ac:12: -1- AC_DEFINE_TRACE_LITERAL([RUN_AS_USER])
-m4trace:configure.ac:12: -1- AH_OUTPUT([RUN_AS_USER], [/* Daemon\'s user */
+m4trace:configure.ac:13: -1- AC_DEFINE_TRACE_LITERAL([RUN_AS_USER])
+m4trace:configure.ac:13: -1- AH_OUTPUT([RUN_AS_USER], [/* Daemon\'s user */
 #undef RUN_AS_USER])
-m4trace:configure.ac:13: -1- AC_DEFINE_TRACE_LITERAL([IP_BASE_ADDR])
-m4trace:configure.ac:13: -1- AH_OUTPUT([IP_BASE_ADDR], [/* PLC\'s base ip address */
-#undef IP_BASE_ADDR])
-m4trace:configure.ac:20: -1- AC_DEFINE_TRACE_LITERAL([NPLC])
-m4trace:configure.ac:20: -1- AH_OUTPUT([NPLC], [/* Number of PLCs */
-#undef NPLC])
-m4trace:configure.ac:27: -1- AC_DEFINE_TRACE_LITERAL([MAX])
-m4trace:configure.ac:27: -1- AH_OUTPUT([MAX], [/* Max sampling interval for media calculation */
+m4trace:configure.ac:14: -1- AC_DEFINE_TRACE_LITERAL([DBHOST])
+m4trace:configure.ac:14: -1- AH_OUTPUT([DBHOST], [/* PLC\'s DB host */
+#undef DBHOST])
+m4trace:configure.ac:15: -1- AC_DEFINE_TRACE_LITERAL([DBNAME])
+m4trace:configure.ac:15: -1- AH_OUTPUT([DBNAME], [/* PLC\'s DB */
+#undef DBNAME])
+m4trace:configure.ac:16: -1- AC_DEFINE_TRACE_LITERAL([DBUSER])
+m4trace:configure.ac:16: -1- AH_OUTPUT([DBUSER], [/* PLC\'s DB user */
+#undef DBUSER])
+m4trace:configure.ac:17: -1- AC_DEFINE_TRACE_LITERAL([DBPWD])
+m4trace:configure.ac:17: -1- AH_OUTPUT([DBPWD], [/* PLC\'s DB password */
+#undef DBPWD])
+m4trace:configure.ac:24: -1- AC_DEFINE_TRACE_LITERAL([TIMEOUT])
+m4trace:configure.ac:24: -1- AH_OUTPUT([TIMEOUT], [/* PLC\'s connection timeout (in seconds) */
+#undef TIMEOUT])
+m4trace:configure.ac:31: -1- AC_DEFINE_TRACE_LITERAL([MAX])
+m4trace:configure.ac:31: -1- AH_OUTPUT([MAX], [/* Max sampling interval for media calculation */
 #undef MAX])
-m4trace:configure.ac:34: -1- AC_DEFINE_TRACE_LITERAL([MIN])
-m4trace:configure.ac:34: -1- AH_OUTPUT([MIN], [/* Min sampling interval for media calculation */
+m4trace:configure.ac:38: -1- AC_DEFINE_TRACE_LITERAL([MIN])
+m4trace:configure.ac:38: -1- AH_OUTPUT([MIN], [/* Min sampling interval for media calculation */
 #undef MIN])
-m4trace:configure.ac:43: -1- AC_DEFINE_TRACE_LITERAL([DEBUG])
-m4trace:configure.ac:43: -1- AH_OUTPUT([DEBUG], [/* "Debug enabled" */
+m4trace:configure.ac:47: -1- AC_DEFINE_TRACE_LITERAL([DEBUG])
+m4trace:configure.ac:47: -1- AH_OUTPUT([DEBUG], [/* "Debug enabled" */
 #undef DEBUG])
-m4trace:configure.ac:45: -1- AC_CONFIG_HEADERS([config.h])
-m4trace:configure.ac:46: -1- AM_INIT_AUTOMAKE([dist-bzip2])
-m4trace:configure.ac:46: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:46: -1- AM_AUTOMAKE_VERSION([1.9.6])
-m4trace:configure.ac:46: -1- AC_PROG_INSTALL
-m4trace:configure.ac:46: -1- AC_SUBST([INSTALL_PROGRAM])
-m4trace:configure.ac:46: -1- AC_SUBST([INSTALL_SCRIPT])
-m4trace:configure.ac:46: -1- AC_SUBST([INSTALL_DATA])
-m4trace:configure.ac:46: -1- AC_SUBST([CYGPATH_W])
-m4trace:configure.ac:46: -1- AC_SUBST([PACKAGE], ['AC_PACKAGE_TARNAME'])
-m4trace:configure.ac:46: -1- AC_SUBST([VERSION], ['AC_PACKAGE_VERSION'])
-m4trace:configure.ac:46: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
-m4trace:configure.ac:46: -1- AH_OUTPUT([PACKAGE], [/* Name of package */
+m4trace:configure.ac:49: -1- AC_CONFIG_HEADERS([config.h])
+m4trace:configure.ac:50: -1- AM_INIT_AUTOMAKE([dist-bzip2])
+m4trace:configure.ac:50: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
+m4trace:configure.ac:50: -1- AM_AUTOMAKE_VERSION([1.9.6])
+m4trace:configure.ac:50: -1- AC_PROG_INSTALL
+m4trace:configure.ac:50: -1- AC_SUBST([INSTALL_PROGRAM])
+m4trace:configure.ac:50: -1- AC_SUBST([INSTALL_SCRIPT])
+m4trace:configure.ac:50: -1- AC_SUBST([INSTALL_DATA])
+m4trace:configure.ac:50: -1- AC_SUBST([CYGPATH_W])
+m4trace:configure.ac:50: -1- AC_SUBST([PACKAGE], ['AC_PACKAGE_TARNAME'])
+m4trace:configure.ac:50: -1- AC_SUBST([VERSION], ['AC_PACKAGE_VERSION'])
+m4trace:configure.ac:50: -1- AC_DEFINE_TRACE_LITERAL([PACKAGE])
+m4trace:configure.ac:50: -1- AH_OUTPUT([PACKAGE], [/* Name of package */
 #undef PACKAGE])
-m4trace:configure.ac:46: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
-m4trace:configure.ac:46: -1- AH_OUTPUT([VERSION], [/* Version number of package */
+m4trace:configure.ac:50: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
+m4trace:configure.ac:50: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 #undef VERSION])
-m4trace:configure.ac:46: -1- AC_SUBST([ACLOCAL])
-m4trace:configure.ac:46: -1- AC_SUBST([AUTOCONF])
-m4trace:configure.ac:46: -1- AC_SUBST([AUTOMAKE])
-m4trace:configure.ac:46: -1- AC_SUBST([AUTOHEADER])
-m4trace:configure.ac:46: -1- AC_SUBST([MAKEINFO])
-m4trace:configure.ac:46: -1- AC_SUBST([install_sh])
-m4trace:configure.ac:46: -1- AC_SUBST([STRIP])
-m4trace:configure.ac:46: -1- AC_SUBST([ac_ct_STRIP])
-m4trace:configure.ac:46: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
-m4trace:configure.ac:46: -1- AC_SUBST([mkdir_p])
-m4trace:configure.ac:46: -1- AC_PROG_AWK
-m4trace:configure.ac:46: -1- AC_SUBST([AWK])
-m4trace:configure.ac:46: -1- AC_PROG_MAKE_SET
-m4trace:configure.ac:46: -1- AC_SUBST([SET_MAKE])
-m4trace:configure.ac:46: -1- AC_SUBST([am__leading_dot])
-m4trace:configure.ac:46: -1- AC_SUBST([AMTAR])
-m4trace:configure.ac:46: -1- AC_SUBST([am__tar])
-m4trace:configure.ac:46: -1- AC_SUBST([am__untar])
-m4trace:configure.ac:48: -1- AC_PROG_CC
-m4trace:configure.ac:48: -1- AC_SUBST([CC])
-m4trace:configure.ac:48: -1- AC_SUBST([CFLAGS])
-m4trace:configure.ac:48: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:48: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:48: -1- AC_SUBST([CC])
-m4trace:configure.ac:48: -1- AC_SUBST([ac_ct_CC])
-m4trace:configure.ac:48: -1- AC_SUBST([CC])
-m4trace:configure.ac:48: -1- AC_SUBST([ac_ct_CC])
-m4trace:configure.ac:48: -1- AC_SUBST([CC])
-m4trace:configure.ac:48: -1- AC_SUBST([CC])
-m4trace:configure.ac:48: -1- AC_SUBST([ac_ct_CC])
-m4trace:configure.ac:48: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
-m4trace:configure.ac:48: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
-m4trace:configure.ac:48: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
-m4trace:configure.ac:48: -1- AC_SUBST([am__include])
-m4trace:configure.ac:48: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:48: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.ac:48: -1- AC_SUBST([AMDEP_TRUE])
-m4trace:configure.ac:48: -1- AC_SUBST([AMDEP_FALSE])
-m4trace:configure.ac:48: -1- AC_SUBST([AMDEPBACKSLASH])
-m4trace:configure.ac:48: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
-m4trace:configure.ac:48: -1- AM_CONDITIONAL([am__fastdepCC], [
+m4trace:configure.ac:50: -1- AC_SUBST([ACLOCAL])
+m4trace:configure.ac:50: -1- AC_SUBST([AUTOCONF])
+m4trace:configure.ac:50: -1- AC_SUBST([AUTOMAKE])
+m4trace:configure.ac:50: -1- AC_SUBST([AUTOHEADER])
+m4trace:configure.ac:50: -1- AC_SUBST([MAKEINFO])
+m4trace:configure.ac:50: -1- AC_SUBST([install_sh])
+m4trace:configure.ac:50: -1- AC_SUBST([STRIP])
+m4trace:configure.ac:50: -1- AC_SUBST([ac_ct_STRIP])
+m4trace:configure.ac:50: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
+m4trace:configure.ac:50: -1- AC_SUBST([mkdir_p])
+m4trace:configure.ac:50: -1- AC_PROG_AWK
+m4trace:configure.ac:50: -1- AC_SUBST([AWK])
+m4trace:configure.ac:50: -1- AC_PROG_MAKE_SET
+m4trace:configure.ac:50: -1- AC_SUBST([SET_MAKE])
+m4trace:configure.ac:50: -1- AC_SUBST([am__leading_dot])
+m4trace:configure.ac:50: -1- AC_SUBST([AMTAR])
+m4trace:configure.ac:50: -1- AC_SUBST([am__tar])
+m4trace:configure.ac:50: -1- AC_SUBST([am__untar])
+m4trace:configure.ac:52: -1- AC_PROG_CC
+m4trace:configure.ac:52: -1- AC_SUBST([CC])
+m4trace:configure.ac:52: -1- AC_SUBST([CFLAGS])
+m4trace:configure.ac:52: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:52: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:52: -1- AC_SUBST([CC])
+m4trace:configure.ac:52: -1- AC_SUBST([ac_ct_CC])
+m4trace:configure.ac:52: -1- AC_SUBST([CC])
+m4trace:configure.ac:52: -1- AC_SUBST([ac_ct_CC])
+m4trace:configure.ac:52: -1- AC_SUBST([CC])
+m4trace:configure.ac:52: -1- AC_SUBST([CC])
+m4trace:configure.ac:52: -1- AC_SUBST([ac_ct_CC])
+m4trace:configure.ac:52: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
+m4trace:configure.ac:52: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
+m4trace:configure.ac:52: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
+m4trace:configure.ac:52: -1- AC_SUBST([am__include])
+m4trace:configure.ac:52: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:52: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:52: -1- AC_SUBST([AMDEP_TRUE])
+m4trace:configure.ac:52: -1- AC_SUBST([AMDEP_FALSE])
+m4trace:configure.ac:52: -1- AC_SUBST([AMDEPBACKSLASH])
+m4trace:configure.ac:52: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
+m4trace:configure.ac:52: -1- AM_CONDITIONAL([am__fastdepCC], [
   test "x$enable_dependency_tracking" != xno \
   && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:48: -1- AC_SUBST([am__fastdepCC_TRUE])
-m4trace:configure.ac:48: -1- AC_SUBST([am__fastdepCC_FALSE])
-m4trace:configure.ac:52: -1- AC_CHECK_LIB([nodave], [daveGetU16At])
-m4trace:configure.ac:52: -1- AH_OUTPUT([HAVE_LIBNODAVE], [/* Define to 1 if you have the `nodave\' library (-lnodave). */
+m4trace:configure.ac:52: -1- AC_SUBST([am__fastdepCC_TRUE])
+m4trace:configure.ac:52: -1- AC_SUBST([am__fastdepCC_FALSE])
+m4trace:configure.ac:54: -1- AC_CHECK_LIB([nodave], [daveGetU16At])
+m4trace:configure.ac:54: -1- AH_OUTPUT([HAVE_LIBNODAVE], [/* Define to 1 if you have the `nodave\' library (-lnodave). */
 #undef HAVE_LIBNODAVE])
-m4trace:configure.ac:52: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBNODAVE])
-m4trace:configure.ac:58: -1- AC_CONFIG_FILES([
+m4trace:configure.ac:54: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBNODAVE])
+m4trace:configure.ac:61: -1- AC_CONFIG_FILES([
    Makefile
    src/Makefile
    test/Makefile
+   scripts/Makefile
 ])
-m4trace:configure.ac:60: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:60: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:62: -1- AC_CONFIG_FILES([scripts/zefirod], [chmod o+x scripts/zefirod])
+m4trace:configure.ac:63: -1- AC_CONFIG_FILES([scripts/zefirod.check], [chmod o+x scripts/zefirod.check])
+m4trace:configure.ac:64: -1- AC_CONFIG_FILES([scripts/zefirod.mail])
+m4trace:configure.ac:65: -1- AC_CONFIG_FILES([scripts/zefirod.crontab])
+m4trace:configure.ac:67: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:67: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
